--- a/testing/parent/pom.xml
+++ b/testing/parent/pom.xml
@@ -129,6 +129,12 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>org.apache.sling.i18n</artifactId>
+        <version>2.2.8</version>
+        <scope>compile</scope>
+      </dependency>
 
       <dependency>
         <groupId>com.day.commons</groupId>
